# callables

./: CMakeLists.txt  README.md  conanfile.py
cmake/: callables-config.cmake.in
include/brun/: callables.hpp
include/brun/callables/: actions.hpp  arithmetic.hpp  bit_operators.hpp  combinators.hpp  comparison.hpp  detail.hpp  format.hpp  functions.hpp  identity.hpp  logical.hpp  math.hpp  nullable.hpp  operators.hpp  ordering.hpp
include/brun/callables/detail/: _config_begin.hpp  _config_end.hpp  config.hpp  functional.hpp  partial.hpp
include/brun/callables/functional/: functor.hpp
modules/: arithmetic.cppm  bit_operators.cppm  callables.cppm  combinators.cppm  format.cppm  functor.cppm  ordering.cppm
src/: comparison.module.cpp  format.module.cpp  functions.module.cpp  identity.module.cpp  math.module.cpp  nullable.module.cpp  operators.module.cpp
test/: CMakeLists.txt  arithmetic.cpp  bit_operators.cpp  comparison.cpp  format.cpp  functions.cpp  logical.cpp  ordering.cpp
